dvwa/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: dvwa
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: dvwa
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: dvwa
  namespace: dvwa
  labels:
    app: dvwa
  annotations: {
    "health-check-ctrl": "HLTHCK_HTTP"
  }
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: dvwa
  type: NodePort
