dvwa/Ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dvwa
  namespace: dvwa
  annotations: {
    fortiweb-ip: "10.0.0.4",
    fortiweb-login: "fortiweb-login-secret",
    fortiweb-port: "443",
    fortiweb-ctrl-log: "disable",
    virtual-server-ip: "10.0.0.6",
    virtual-server-addr-type: "ipv4",
    virtual-server-interface: "port1",
    server-policy-web-protection-profile: "Inline Standard Protection",
    server-policy-https-service: "HTTPS",
    server-policy-http-service: "HTTP",
    server-policy-syn-cookie: "enable",
    server-policy-http-to-https: "disable"
  }
spec:
  ingressClassName: fwb-ingress-controller
  tls:
    - secretName: dvwa-tls
      hosts:
        - dvwa.40docs.com
  rules:
    - host: dvwa.40docs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dvwa
                port:
                  number: 80
